Mon Nov 12 19:24:00 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* src/accessdb.c (main), src/globbing_test.c (main),
	  src/lexgrog_test.c (main), src/zsoelim.l (main): Enable
	  localisation (Debian bug #448395).

Sun Nov 11 05:43:16 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* configure.ac: Issue a useful error message if
	  gnulib/po/Makefile.in.in does not exist (reported by Ming Hua).

Mon Oct 22 00:04:45 BST 2007  Colin Watson  <cjwatson@debian.org>

	Bruno Haible notes in
	http://lists.gnu.org/archive/html/groff/2005-12/msg00061.html that
	setlocale is supported on all known systems, and it is in C89. Use
	it unconditionally.

	* configure.ac: Don't check for setlocale.
	* src/catman.c (parse_for_sec), src/man.c (main), src/manp.c
	  (add_nls_manpath), src/whatis.c (main): Remove HAVE_SETLOCALE
	  conditionals.

Sun Oct 21 21:56:02 BST 2007  Colin Watson  <cjwatson@debian.org>

	* configure.ac: Forbid output tokens beginning with "MAN_".

Sun Oct 21 21:52:43 BST 2007  Colin Watson  <cjwatson@debian.org>

	* configure.ac: Rationalise use of comments. Use more vertical
	  whitespace.

Sun Oct 21 21:12:46 BST 2007  Colin Watson  <cjwatson@debian.org>

	* gnulib: Import .po files (--po-base=gnulib/po --po-domain=man-db).
	* configure.ac (AC_CONFIG_FILES): Generate gnulib/po/Makefile.in.
	* Makefile.am (SUBDIRS): Build gnulib/po.
	* .bzrignore: Ignore gnulib/po. This is contrary to our usual
	  practice, since this is generated by autogen.sh; but gnulib-tool
	  gives us full .po files which are then stripped down to just the
	  parts of Gnulib we use by make, so adding them to bzr is
	  inconvenient.

Sun Oct 21 19:46:26 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/man.c (man_getopt): Fix reversed handling of -f and -k in the
	  "incompatible options" message.

Sun Oct 21 19:43:27 BST 2007  Colin Watson  <cjwatson@debian.org>

	* configure.ac (CFLAGS): Add -Wformat-security.
	* src/man.c (man_getopt): Use %s as the format string for the