@@ -1,3 +1,9 @@
+Tue Nov 13 22:10:51 GMT 2007  Colin Watson  <cjwatson@debian.org>
+
+	* src/whatis.c (use_grep, do_whatis, word_fnmatch, search, main):
+	  Rename regex to regex_opt, as Solaris' <libgen.h> defines a regex
+	  function (thanks to the Nexenta developers).
+
 Mon Nov 12 19:24:00 GMT 2007  Colin Watson  <cjwatson@debian.org>
 
 	* src/accessdb.c (main), src/globbing_test.c (main),
